# benchmarks

./: .gitmodules
heterogeneousLookup/: heterogeneousLookupBenchmark.cpp
map/: P0460R0_flat_map.diff  benchmarkMapVectorFindPerformance_MSVC_2015_u3_32_release.csv  benchmarkMapVectorInsertPerformance_MSVC_2015_u3_32_release.csv  benchmarkStringMapWithCharPtrLookup_MSVC_2015_u3_32_release.csv  dfgTestContMapVectorPerformance.cpp  mapPerformanceComparison.md
map/mapSimpleInsert/: CMakeLists.txt  mapSimpleInsert.cpp  results.csv  results_gcc_clang.csv  results_gcc_clang_summary.csv  results_gcc_clang_summary.csv.conf  results_gcc_clang_summary_for_md.csv  results_summary.csv  results_summary.csv.conf  run_tests.sh
vectorInsert/: benchmarkVectorInsert.csv  dfgTestContMapVectorPerformance.cpp  insertTest.cpp  vectorInsertBenchmarking.md  vectorInsertIndexes_50000.7z
